[gd_scene load_steps=4 format=3 uid="uid://dvf77hku11u25"]

[ext_resource type="Script" uid="uid://f5duyrh4j3oj" path="res://Scripts/movetop.gd" id="1_ffqs8"]
[ext_resource type="Texture2D" uid="uid://jk8vh5j5iinh" path="res://Assets/topbun.png" id="2_ffqs8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmkpo"]
size = Vector2(213, 59)

[node name="Area2D" type="Area2D"]
collision_layer = 2
script = ExtResource("1_ffqs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-140.5, -86)
shape = SubResource("RectangleShape2D_lmkpo")

[node name="Button" type="Button" parent="."]
offset_left = -243.0
offset_top = -138.0
offset_right = -39.0
offset_bottom = -58.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-139.5, -99)
scale = Vector2(0.367837, 0.56338)
texture = ExtResource("2_ffqs8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
